--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -22,6 +22,9 @@
     border-radius: 5px;
     border: 1px solid #9f9f9f;
 }
+.select{
+    flex: 3;
+}
 .control input:focus{
     outline: none;
     border-color: #1c8ec9;
