it is now possible to send and receive file via blockchain

--- a/src/components/UI/Buttons/Button.module.css
+++ b/src/components/UI/Buttons/Button.module.css
@@ -6,8 +6,9 @@
     font-size: 15px;
     cursor: pointer;
     border: none;
+    border-radius: 5px;
 }
 
 .button:hover{
-    background-color: #1c8ec9;
+    background-color: #135e85;
 }
