transfer item date fix

--- a/src/components/UI/TransferItem/TransferItem.module.css
+++ b/src/components/UI/TransferItem/TransferItem.module.css
@@ -32,6 +32,9 @@
 .greenBack{
     background-color: #8dcf8d;
 }
+.redBack{
+    background-color: #cf8d8d;
+}
 .yellowBack{
     background-color: #cfb08d;
 }
