--- a/src/components/screen/MyFiles/MyFiles.module.css
+++ b/src/components/screen/MyFiles/MyFiles.module.css
@@ -1,6 +1,8 @@
 .container{
-    padding: 3rem;
     width: 90%;
     max-width: 40rem;
     margin: 2rem auto;
+}
+.warning{
+    padding: 3rem;
 }
