added form validation

--- a/src/components/UI/TransferItem/TransferItem.module.css
+++ b/src/components/UI/TransferItem/TransferItem.module.css
@@ -20,6 +20,7 @@
     background-color: #d5e9f3;
     padding: 7px;
     text-align: center;
+    font-weight: bold;
 }
 .download{
     width: 15%;
