--- a/src/components/screen/TransferDetails/TransferDetails.module.css
+++ b/src/components/screen/TransferDetails/TransferDetails.module.css
@@ -11,6 +11,9 @@
     flex-direction: row;
     justify-content: center;
 }
+.block{
+    width: 35%;
+}
 .container{
     padding: 3rem;
     width: 90%;
